# PortfolioPerformance

./: .gitignore  README.md  config.yaml.example  config_schemas.py  launch.sh  main.py  portfolio.py  price_data.py  pyproject.toml
reports/: report_template.html
src/: __init__.py  config_schemas.py  main.py  portfolio.py  price_data.py
