[project]
name = "PortfolioPerformance"
version = "1.0.0"
description = "Portfolio performance reporter"
readme = "README.md"
requires-python = ">=3.13"
launch_path="src/main.py"
dependencies = [
    "cloudinary>=1.44.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "sc-utility>=2.6.8",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[dev.env.sync]
remote="~/Library/CloudStorage/Dropbox/Development/dev_setup/app_config/PortfolioPerformance"
patterns = [
    ".env",
    "configs/*",
    "data/*",
]